--- a/bbl-payment/build.gradle
+++ b/bbl-payment/build.gradle
@@ -34,7 +34,13 @@ dependencies {
     testImplementation 'org.springframework.batch:spring-batch-test'
 
     //config
-    implementation 'org.springframework.cloud:spring-cloud-starter-config'
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-config'
+
+    //acutator
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-actuator'
+
+    //amqp
+    implementation group: 'org.springframework.cloud', name: 'spring-cloud-starter-bus-amqp'
 
     //Eureka
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client'
@@ -48,6 +54,9 @@ dependencies {
     //lombok
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.projectlombok:lombok'
+
+    //Swagger
+    implementation 'io.springfox:springfox-boot-starter:3.0.0'
 
     //spring batch
     implementation 'org.springframework.boot:spring-boot-starter-batch'
